<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_gradient"
    android:gravity="center"
    tools:context="android.prosotec.proyectocierzo.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:contentDescription="@string/description_logo"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/login_user"
        android:paddingLeft="60dp"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/et_mail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/login_password"
        android:paddingLeft="60dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/et_pass"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPassword"/>
    
    <Button
        android:id="@+id/bt_access"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/bt_login"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@color/colorLoginGradienteAlto"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/login_registro"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"/>

</LinearLayout>
