<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="android.prosotec.proyectocierzo.Main2Activity"
    android:background="#FFFFFF">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar_layout">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_scrollFlags="enterAlways|scroll|snap">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo"/>
                <SearchView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"/>

            </android.support.v7.widget.Toolbar>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/playlist_tab"
                    android:text="@string/tab_playlist"/>
                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/song_tab"
                    android:text="@string/tab_song"/>
                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/album_tab"
                    android:text="@string/tab_album"/>
                <android.support.design.widget.TabItem
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:id="@+id/artist_tab"
                    android:text="@string/tab_artists"/>

            </android.support.design.widget.TabLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginBottom="-10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </android.support.design.widget.CoordinatorLayout>

    <android.prosotec.proyectocierzo.view.MiniPlayerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/appbar_layout"
        android:id="@+id/mini_player_view"/>

</RelativeLayout>
